tests/ui/regex.stderr
error: regex syntax error: empty alternate
  --> $DIR/regex.rs:16:45
   |
16 |     let pipe_in_wrong_position = Regex::new("|");
   |                                             ^^^
   |
   = note: #[deny(invalid_regex)] on by default

error: regex syntax error: empty alternate
  --> $DIR/regex.rs:18:60
   |
18 |     let pipe_in_wrong_position_builder = RegexBuilder::new("|");
   |                                                            ^^^
   |
   = note: #[deny(invalid_regex)] on by default

error: regex syntax error: invalid character class range
  --> $DIR/regex.rs:20:40
   |
20 |     let wrong_char_ranice = Regex::new("[z-a]");
   |                                        ^^^^^^^
   |
   = note: #[deny(invalid_regex)] on by default

error: regex syntax error: invalid character class range
  --> $DIR/regex.rs:22:35
   |
22 |     let some_unicode = Regex::new("[é-è]");
   |                                   ^^^^^^^
   |
   = note: #[deny(invalid_regex)] on by default

error: regex syntax error on position 0: unclosed parenthesis
  --> $DIR/regex.rs:25:33
   |
25 |     let some_regex = Regex::new(OPENING_PAREN);
   |                                 ^^^^^^^^^^^^^
   |
   = note: #[deny(invalid_regex)] on by default

error: regex syntax error: empty alternate
  --> $DIR/regex.rs:28:53
   |
28 |     let binary_pipe_in_wrong_position = BRegex::new("|");
   |                                                     ^^^
   |
   = note: #[deny(invalid_regex)] on by default

error: regex syntax error on position 0: unclosed parenthesis
  --> $DIR/regex.rs:30:41
   |
30 |     let some_binary_regex = BRegex::new(OPENING_PAREN);
   |                                         ^^^^^^^^^^^^^
   |
   = note: #[deny(invalid_regex)] on by default

error: regex syntax error on position 0: unclosed parenthesis
  --> $DIR/regex.rs:32:56
   |
32 |     let some_binary_regex_builder = BRegexBuilder::new(OPENING_PAREN);
   |                                                        ^^^^^^^^^^^^^
   |
   = note: #[deny(invalid_regex)] on by default

error: regex syntax error on position 0: unclosed parenthesis
  --> $DIR/regex.rs:48:9
   |
48 |         OPENING_PAREN,
   |         ^^^^^^^^^^^^^
   |
   = note: #[deny(invalid_regex)] on by default

error: regex syntax error on position 0: unclosed parenthesis
  --> $DIR/regex.rs:53:9
   |
53 |         OPENING_PAREN,
   |         ^^^^^^^^^^^^^
   |
   = note: #[deny(invalid_regex)] on by default

error: trivial regex
  --> $DIR/regex.rs:60:33
   |
60 |     let trivial_eq = Regex::new("^foobar$");
   |                                 ^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/regex.rs:5:24
   |
5  | #![deny(invalid_regex, trivial_regex, regex_macro)]
   |                        ^^^^^^^^^^^^^
   = help: consider using consider using `==` on `str`s

error: trivial regex
  --> $DIR/regex.rs:64:48
   |
64 |     let trivial_eq_builder = RegexBuilder::new("^foobar$");
   |                                                ^^^^^^^^^^
   |
   = help: consider using consider using `==` on `str`s

error: trivial regex
  --> $DIR/regex.rs:68:42
   |
68 |     let trivial_starts_with = Regex::new("^foobar");
   |                                          ^^^^^^^^^
   |
   = help: consider using consider using `str::starts_with`

error: trivial regex
  --> $DIR/regex.rs:72:40
   |
72 |     let trivial_ends_with = Regex::new("foobar$");
   |                                        ^^^^^^^^^
   |
   = help: consider using consider using `str::ends_with`

error: trivial regex
  --> $DIR/regex.rs:76:39
   |
76 |     let trivial_contains = Regex::new("foobar");
   |                                       ^^^^^^^^
   |
   = help: consider using consider using `str::contains`

error: trivial regex
  --> $DIR/regex.rs:80:39
   |
80 |     let trivial_contains = Regex::new(NOT_A_REAL_REGEX);
   |                                       ^^^^^^^^^^^^^^^^
   |
   = help: consider using consider using `str::contains`

error: trivial regex
  --> $DIR/regex.rs:84:40
   |
84 |     let trivial_backslash = Regex::new("a//.b");
   |                                        ^^^^^^^
   |
   = help: consider using consider using `str::contains`

error: trivial regex
  --> $DIR/regex.rs:89:36
   |
89 |     let trivial_empty = Regex::new("");
   |                                    ^^
   |
   = help: consider using the regex is unlikely to be useful as it is

error: trivial regex
  --> $DIR/regex.rs:93:36
   |
93 |     let trivial_empty = Regex::new("^");
   |                                    ^^^
   |
   = help: consider using the regex is unlikely to be useful as it is

error: trivial regex
  --> $DIR/regex.rs:97:36
   |
97 |     let trivial_empty = Regex::new("^$");
   |                                    ^^^^
   |
   = help: consider using consider using `str::is_empty`

error: trivial regex
   --> $DIR/regex.rs:101:44
    |
101 |     let binary_trivial_empty = BRegex::new("^$");
    |                                            ^^^^
    |
    = help: consider using consider using `str::is_empty`

error: aborting due to 21 previous errors

